# jobApplication-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  extract_fonts.py  extract_images.py  get_layout.py  pyproject.toml  railway.toml  vercel.json
examples/: job.example.txt  job_analysis.example.json  profile.example.json  profile_match.example.json  response_prediction.example.json
memory/: MEMORY.md  project_architecture.md
scripts/: railway-migrate.sh
src/jobassistant/: __init__.py  config.py
src/jobassistant/api/: __init__.py  applications_router.py  autofill_router.py  deps.py  files_router.py  main.py  prediction_router.py  scraper_router.py
src/jobassistant/cli/: main.py
src/jobassistant/db/: __init__.py  applications_repo.py  pool.py
src/jobassistant/prompts/: __init__.py  cover_letter.md  cv.md  job_analysis.md  match_narrative.md
src/jobassistant/schemas/: __init__.py  application.py  autofill.py  generation.py  intelligence.py  prediction.py  profile.py  scrape.py
src/jobassistant/services/: __init__.py  autofill.py  generation.py  json_utils.py  llm.py  output.py  prompt_loader.py
supabase/migrations/: 20260501000000_applications.sql  20260502090000_response_prediction.sql
tests/: test_response_prediction.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: action-buttons.tsx  autofill-panel.tsx  job-input.tsx  knowledge-base.tsx  output-tabs.tsx  preview-panel.tsx  profile-form.tsx
web/src/lib/: api-applications.ts  api-prediction.ts  api.ts  (+7 more)
(+27 files in other folders)
